differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr27953.c-5.4.0-3.out.txt
pr27953.c:3:19: error: parameter 1 (‘a’) has incomplete type
 void foo(struct A a) {}  
                   ^
pr27953.c:7:6: error: redefinition of ‘foo’
 void foo() {}
      ^
pr27953.c:3:6: note: previous definition of ‘foo’ was here
 void foo(struct A a) {}  
      ^
